--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet"href="style.css"></link>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>Pizeria App</title>
+    <title>Crunchy Royal Pizza</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
